# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import blogRouter from "./blog";
 import subscriptionRouter from "./subscription";
 import lawyerRouter from "./lawyer";
+import cadastroRouter from "./cadastro";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(blogRouter);
 router.use(subscriptionRouter);
 router.use(lawyerRouter);
+router.use(cadastroRouter);
 
 export default router;
